@@ -10,7 +10,7 @@ public class UHSParseException extends IOException {
 	}
 
 	public UHSParseException( String message ) {
-		super(message);
+		super( message );
 	}
 
 	public UHSParseException( Throwable cause ) {
