@@ -1,6 +1,7 @@
 package net.vhati.openuhs.desktopreader.reader;
 
 import java.awt.Component;
+import java.awt.Container;
 import java.awt.Cursor;
 import java.awt.Dimension;
 import java.awt.GridBagLayout;
@@ -18,6 +19,9 @@ import javax.swing.JPanel;
 import javax.swing.event.MouseInputAdapter;
 import javax.swing.event.MouseInputListener;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import net.vhati.openuhs.core.HotSpot;
 import net.vhati.openuhs.core.UHSHotSpotNode;
 import net.vhati.openuhs.core.UHSNode;
@@ -30,7 +34,9 @@ import net.vhati.openuhs.desktopreader.reader.ZonePanel;
  * A JPanel that displays a node and its children.
  */
 public class NodePanel extends JScrollablePanel {
-	private NodePanel pronoun = this;
+
+	private final Logger logger = LoggerFactory.getLogger( NodePanel.class );
+
 	private UHSNode node = null;
 	private UHSReaderNavCtrl navCtrl = null;
 
@@ -54,25 +60,28 @@ public class NodePanel extends JScrollablePanel {
 			layoutC.weighty = 0;
 			layoutC.gridy = 0;
 			layoutC.gridwidth = GridBagConstraints.REMAINDER;  //End Row
-		pronoun.setLayout( layoutGridbag );
+		this.setLayout( layoutGridbag );
 
 		MouseListener clickListener = new MouseAdapter() {
 			@Override
 			public void mouseClicked( MouseEvent e ) {
-				if ( pronoun.getParent() != null ) {
-					JComponent thisComponent = (JComponent)e.getSource();
-					JComponent parent = (JComponent)pronoun.getParent();
-					for ( int i=0; i < ((JComponent)thisComponent.getParent()).getComponentCount(); i++ ) {
-						if ( ((JComponent)thisComponent.getParent()).getComponent( i ).equals( thisComponent ) ) {
-							if ( node.getChild( i ).isGroup() ) {
-								navCtrl.setReaderNode( node.getChild( i ) );
-							}
-							else if ( node.getChild( i ).isLink() ) {
-								int targetIndex = node.getChild( i ).getLinkTarget();
-								navCtrl.setReaderNode( targetIndex );
-							}
-							break;
-						}
+				JComponent sourceComponent = (JComponent)e.getSource();
+				Container sourceParent = sourceComponent.getParent();
+
+				int index = -1;
+				for ( int i=0; i < sourceParent.getComponentCount(); i++ ) {
+					if ( sourceParent.getComponent( i ) == sourceComponent ) {
+						index = i;
+						break;
+					}
+				}
+				if ( index >= 0 ) {
+					if ( node.getChild( index ).isGroup() ) {
+						navCtrl.setReaderNode( node.getChild( index ) );
+					}
+					else if ( node.getChild( index ).isLink() ) {
+						int targetIndex = node.getChild( index ).getLinkTarget();
+						navCtrl.setReaderNode( targetIndex );
 					}
 				}
 			}
@@ -84,7 +93,7 @@ public class NodePanel extends JScrollablePanel {
 
 			private int getZone( UHSHotSpotNode nick, int x, int y ) {
 				for ( int i=1; i < nick.getChildCount(); i++ ) {
-					HotSpot spot = nick.getSpot( nick.getChild(i) );
+					HotSpot spot = nick.getSpot( nick.getChild( i ) );
 					if ( x > spot.zoneX && y > spot.zoneY && x < spot.zoneX+spot.zoneW && y < spot.zoneY+spot.zoneH ) {
 						return i;
 					}
@@ -93,14 +102,15 @@ public class NodePanel extends JScrollablePanel {
 			}
 			@Override
 			public void mouseMoved( MouseEvent e ) {
-				if ( pronoun.getParent() != null ) {
-					JComponent thisComponent = (JComponent)e.getSource();
-					UHSHotSpotNode nick = (UHSHotSpotNode)node;
+				JComponent sourceComponent = (JComponent)e.getSource();
+				UHSHotSpotNode nick = (UHSHotSpotNode)node;
 
-					int x = e.getX(); int y = e.getY();
+				int x = e.getX(); int y = e.getY();
 
-					if ( getZone( nick, x, y ) != -1 ) thisComponent.setCursor( zoneCursor );
-					else thisComponent.setCursor( normCursor );
+				if ( getZone( nick, x, y ) != -1 ) {
+					sourceComponent.setCursor( zoneCursor );
+				} else {
+					sourceComponent.setCursor( normCursor );
 				}
 			}
 		};
@@ -111,21 +121,23 @@ public class NodePanel extends JScrollablePanel {
 
 			@Override
 			public void mouseEntered( MouseEvent e ) {
-				ZonePanel thisComponent = (ZonePanel)e.getSource();
-				thisComponent.setCursor( zoneCursor );
+				ZonePanel sourcePanel = (ZonePanel)e.getSource();
+				sourcePanel.setCursor( zoneCursor );
 			}
 			@Override
 			public void mouseExited( MouseEvent e ) {
-				ZonePanel thisComponent = (ZonePanel)e.getSource();
-				thisComponent.setCursor( normCursor );
+				ZonePanel sourcePanel = (ZonePanel)e.getSource();
+				sourcePanel.setCursor( normCursor );
 			}
 			@Override
 			public void mouseClicked( MouseEvent e ) {
-				ZonePanel thisComponent = (ZonePanel)e.getSource();
-				ZonePanel zoneTarget = thisComponent.getZoneTarget();
-				int targetIndex = thisComponent.getLinkTarget();
-				if ( zoneTarget != null )
+				ZonePanel sourcePanel = (ZonePanel)e.getSource();
+				ZonePanel zoneTarget = sourcePanel.getZoneTarget();
+				int targetIndex = sourcePanel.getLinkTarget();
+
+				if ( zoneTarget != null ) {
 					zoneTarget.setContentsVisible( !zoneTarget.getContentsVisible() );
+				}
 				else if ( targetIndex != -1 ) {
 					navCtrl.setReaderNode( targetIndex );
 				}
@@ -138,45 +150,70 @@ public class NodePanel extends JScrollablePanel {
 			JLayeredPane sharedPanel = new JLayeredPane();
 
 			for ( int i=0; i < node.getChildCount(); i++ ) {
+				String childType = node.getChild( i ).getType();
 				int childContentType = node.getChild( i ).getContentType();
-				if ( childContentType == UHSNode.STRING ) {
-					HotSpot spot = nick.getSpot( nick.getChild( i ) );
-					ZonePanel spotPanel = new ZonePanel();
-						//spotPanel.setToolTipText( (String)(node.getChild( i ).getContent()) );
-						spotPanel.setBounds( spot.zoneX, spot.zoneY, spot.zoneW, spot.zoneH );
-						sharedPanel.add( spotPanel, JLayeredPane.PALETTE_LAYER, 0 );
-						spotPanel.addMouseListener( zoneListener );
-					if ( node.getChild( i ).isLink() ) {
-						// Follow the link when clicked
-						spotPanel.setLinkTarget( node.getChild( i ).getLinkTarget() );
-					} else {
-						// Switch to that child when clicked
-						spotPanel.setLinkTarget( node.getChild( i ).getId() );
-					}
+
+				if ( i == 0 && childContentType == UHSNode.IMAGE ) {
+					// The main image is visible and full size. Ignore its HotSpot zone.
+
+					byte[] imageBytes = (byte[])node.getChild( i ).getContent();
+					JLabel imageLbl = new JLabel( new ImageIcon( imageBytes ) );
+
+					ZonePanel contentPanel = new ZonePanel( imageLbl );
+						Dimension pSize = contentPanel.getPreferredSize();
+						contentPanel.setBounds( 0, 0, pSize.width, pSize.height );
+						contentPanel.setContentsVisible( true );
+						sharedPanel.add( contentPanel, JLayeredPane.DEFAULT_LAYER, 0 );
+
+					// Stretch the shared panel to fit the main image.
+					sharedPanel.setPreferredSize( pSize );
+					sharedPanel.setMinimumSize( pSize );
 				}
-				else if ( childContentType == UHSNode.IMAGE ) {
+				else if ( "Overlay".equals( childType ) ) {
 					HotSpot spot = nick.getSpot( nick.getChild( i ) );
 
-					JLabel imageLbl = new JLabel( new ImageIcon( (byte[])(node.getChild( i ).getContent()) ) );
+					String title = (String)node.getChild( i ).getContent();
+
+					UHSNode imageNode = node.getChild( i ).getFirstChild( "OverlayData" );
+					byte[] imageBytes = (byte[])imageNode.getContent();
+					JLabel imageLbl = new JLabel( new ImageIcon( imageBytes ) );
 
 					ZonePanel contentPanel = new ZonePanel( imageLbl );
 						Dimension pSize = contentPanel.getPreferredSize();
 						contentPanel.setBounds( spot.x, spot.y, pSize.width, pSize.height );
 						sharedPanel.add( contentPanel, JLayeredPane.DEFAULT_LAYER, 0 );
-					if ( i == 0 ) {
-						contentPanel.setContentsVisible( true );
-						sharedPanel.setPreferredSize( pSize );
-						sharedPanel.setMinimumSize( pSize );
-					} else {
-						ZonePanel spotPanel = new ZonePanel();
-							spotPanel.setZoneTarget( contentPanel );
-							spotPanel.setBounds( spot.zoneX, spot.zoneY, spot.zoneW, spot.zoneH );
-							sharedPanel.add( spotPanel, JLayeredPane.PALETTE_LAYER, 0 );
-							spotPanel.addMouseListener( zoneListener );
+
+					ZonePanel spotPanel = new ZonePanel();
+						spotPanel.setToolTipText( title );
+						spotPanel.setZoneTarget( contentPanel );
+						spotPanel.setBounds( spot.zoneX, spot.zoneY, spot.zoneW, spot.zoneH );
+						sharedPanel.add( spotPanel, JLayeredPane.PALETTE_LAYER, 0 );
+						spotPanel.addMouseListener( zoneListener );
+
+				}
+				else if ( childContentType == UHSNode.STRING ) {
+					HotSpot spot = nick.getSpot( nick.getChild( i ) );
+
+					String text = (String)node.getChild( i ).getContent();
+
+					ZonePanel spotPanel = new ZonePanel();
+						spotPanel.setToolTipText( text );
+						spotPanel.setBounds( spot.zoneX, spot.zoneY, spot.zoneW, spot.zoneH );
+						sharedPanel.add( spotPanel, JLayeredPane.PALETTE_LAYER, 0 );
+						spotPanel.addMouseListener( zoneListener );
+
+					if ( node.getChild( i ).isLink() ) { // Follow the link when clicked.
+						spotPanel.setLinkTarget( node.getChild( i ).getLinkTarget() );
+					}
+					else { // Visit that child when clicked.
+						spotPanel.setLinkTarget( node.getChild( i ).getId() );
 					}
 				}
+				else {
+					logger.error( "Unexpected {} child of UHSHotSpotNode", childType );
+				}
 			}
-			pronoun.add( sharedPanel, layoutC );
+			this.add( sharedPanel, layoutC );
 			layoutC.gridy++;
 		}
 		else {
@@ -189,7 +226,7 @@ public class NodePanel extends JScrollablePanel {
 						tmpUHSArea.setEditable( false );
 						tmpUHSArea.setBorder( BorderFactory.createEtchedBorder() );
 						tmpUHSArea.setVisible( i==0 || showAll );
-						pronoun.add( tmpUHSArea, layoutC );
+						this.add( tmpUHSArea, layoutC );
 					layoutC.gridy++;
 					if ( tmpNode.isGroup() || tmpNode.isLink() ) {
 						tmpUHSArea.addMouseListener( clickListener );
@@ -212,27 +249,26 @@ public class NodePanel extends JScrollablePanel {
 					JPanel tmpPanel = new JPanel();
 						tmpPanel.add( tmpComp );
 						tmpPanel.setVisible( i==0 || showAll );
-						pronoun.add( tmpPanel, layoutC );
+						this.add( tmpPanel, layoutC );
 					layoutC.gridy++;
 				}
 			}
 		}
 		if ( allgroup || showAll ) {
-			for ( int i=0; i < pronoun.getComponentCount(); i++ ) {
-				((JComponent)pronoun.getComponent( i )).setVisible( true );
+			for ( int i=0; i < this.getComponentCount(); i++ ) {
+				((JComponent)this.getComponent( i )).setVisible( true );
 			}
 			node.setRevealedAmount( node.getChildCount() );
 		}
 		else {
-			for ( int i=0; i < pronoun.getComponentCount() && i < node.getRevealedAmount(); i++ ) {
-				((JComponent)pronoun.getComponent( i )).setVisible( true );
+			for ( int i=0; i < this.getComponentCount() && i < node.getRevealedAmount(); i++ ) {
+				((JComponent)this.getComponent( i )).setVisible( true );
 			}
 		}
 		layoutC.weighty = 1;
-		//pronoun.add( new JLabel( "" ), layoutC );
 
-		pronoun.revalidate();
-		pronoun.repaint();
+		this.revalidate();
+		this.repaint();
 	}
 
 
@@ -266,8 +302,8 @@ public class NodePanel extends JScrollablePanel {
 			}
 		}
 		if ( guiChanged ) {
-			pronoun.revalidate();
-			pronoun.repaint();
+			this.revalidate();
+			this.repaint();
 		}
 		return currentRevealedAmount;
 	}
